Use java 16 Stream.toList